@@ -25,6 +25,8 @@ version 1.0.
 1.1.1
 -----
 
+- Add missing C++ methods: MPI::Datatype::Create_indexed_block,
+  MPI::Datatype::Create_resized, MPI::Datatype::Get_true_extent.
 - Fix OSX linker issue with Fortran bindings.
 - Addition of "dr" (data reliability) PML.
 - Fixed MPI_COMM_SPAWN to start spawning new processes in slots that
